# diffai-python

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/diffai/: __init__.py
src/: lib.rs
src/diffai_python/: __init__.py
tests/: test_diff.py
