[package]
name = "diffai_python"
version = "0.5.0"
edition = "2021"
description = "Python bindings for diffai - AI/ML model diff tool"
license = "MIT"
repository = "https://github.com/kako-jun/diffai-python"
authors = ["kako-jun"]

[lib]
name = "_diffai"
crate-type = ["cdylib"]

[dependencies]
# Core diffai functionality
diffai-core = "0.4"

# PyO3 for Python bindings
pyo3 = { version = "0.24", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.0"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-fmt"] }
